--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,32 +1,32 @@
-import groovy.json.JsonSlurperClassic
-
-def jsonParse(def json) {
-    new groovy.json.JsonSlurperClassic().parseText(json)
-}
 pipeline {
-    agent {label 'master' }
-    enviroment {
-        appName = "variable"
-    }
+    agent any
+
     stages {
-        stage("Paso 1"){
+        stage ('Compile Stage') {
+
             steps {
-                script {
-                    sh "echo 'hola mundo'"
+                withMaven(maven : 'maven_3_5_0') {
+                    sh 'mvn clean compile'
                 }
             }
         }
-    }
-    post {
-        always {
-            deleteDir()
-                sh "echo 'fase always'"
+
+        stage ('Testing Stage') {
+
+            steps {
+                withMaven(maven : 'maven_3_5_0') {
+                    sh 'mvn test'
+                }
+            }
         }
-        seccess {
-            sh "echo 'fase success'"
-        }
-        failure {
-            sh "echo 'fase failure'"
+
+
+        stage ('Deployment Stage') {
+            steps {
+                withMaven(maven : 'maven_3_5_0') {
+                    sh 'mvn deploy'
+                }
+            }
         }
     }
 }
