--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,8 @@ pipeline {
       steps {
         salt(authtype: 'pam', clientInterface: local(arguments: 'ls', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'NGITQA-AUT-N01', targettype: 'glob'), credentialsId: '0cbaee23-40ff-4289-ba3a-2ade61ee12d5', saveFile: true, servername: 'http://10.251.205.11:3333')
         script {
-            def output = readFile "/tmp/saltOutput.json"
+            env.WORKSPACE = pwd()
+            def output = readFile "${env.WORKSPACE}/saltOutput.json"
             echo output
         }
       }
