--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         salt(authtype: 'pam', clientInterface: local(arguments: 'dir', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'NetGenBAckup', targettype: 'glob'), credentialsId: '0cbaee23-40ff-4289-ba3a-2ade61ee12d5', saveFile: true, servername: 'http://10.251.205.11:3333')
         script {
             env.WORKSPACE = pwd()
-            def output = readFile "${env.WORKSPACE}/saltOutput.json"
+            def output = readFile "${env.WORKSPACE}/saltOutput2.json"
             echo output
         }
       }
