--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
   stages {
     stage('Linux') {
       steps {
-        salt(authtype: 'pam', clientInterface: local(arguments: 'ls', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'NGITDV-AUT-N01', targettype: 'glob'), credentialsId: '3996b821-8d42-4439-8899-e3eb69df36b6', saveFile: true, servername: 'http://10.251.205.10:3333')
+        salt(authtype: 'pam', clientInterface: local(arguments: 'ls', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'ESV_ESVPINPRDCID', targettype: 'glob'), credentialsId: '8b60451b-984a-4193-8913-3161ebac7874', saveFile: true, servername: 'http://10.33.27.126:3333')
         script {
             env.WORKSPACE = pwd()
             def output = readFile "${env.WORKSPACE}/saltOutput.json"
@@ -14,7 +14,7 @@ pipeline {
     }
     stage('Windows') {
       steps {
-        salt(authtype: 'pam', clientInterface: local(arguments: 'dir', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'NetGenBAckup', targettype: 'glob'), credentialsId: '0cbaee23-40ff-4289-ba3a-2ade61ee12d5', saveFile: true, servername: 'http://10.251.205.11:3333')
+        salt(authtype: 'pam', clientInterface: local(arguments: 'dir', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'TVT_BOTR002', targettype: 'glob'), credentialsId: '8b60451b-984a-4193-8913-3161ebac7874', saveFile: true, servername: 'http://10.33.27.127:3333')
         script {
             env.WORKSPACE = pwd()
             def output = readFile "${env.WORKSPACE}/saltOutput2.json"
