--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         salt(authtype: 'pam', clientInterface: local(arguments: 'dir', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'TVT_BOTR002', targettype: 'glob'), credentialsId: '8b60451b-984a-4193-8913-3161ebac7874', saveFile: true, servername: 'http://10.33.27.127:3333')
         script {
             env.WORKSPACE = pwd()
-            def output = readFile "${env.WORKSPACE}/saltOutput2.json"
+            def output = readFile "${env.WORKSPACE}/saltOutput.json"
             echo output
         }
       }
