--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,19 +2,9 @@ pipeline {
   agent any
 
   stages {
-    stage('Linux') {
+    stage('Windows memoria') {
       steps {
-        salt(authtype: 'pam', clientInterface: local(arguments: 'ls', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'ESV_ESVPINPRDCID', targettype: 'glob'), credentialsId: '8b60451b-984a-4193-8913-3161ebac7874', saveFile: true, servername: 'http://10.33.27.126:3333')
-        script {
-            env.WORKSPACE = pwd()
-            def output = readFile "${env.WORKSPACE}/saltOutput.json"
-            echo output
-        }
-      }
-    }
-    stage('Windows') {
-      steps {
-        salt(authtype: 'pam', clientInterface: local(arguments: 'dir', blockbuild: true, function: 'cmd.run', jobPollTime: 6, target: 'TVT_BOTR002', targettype: 'glob'), credentialsId: '8b60451b-984a-4193-8913-3161ebac7874', saveFile: true, servername: 'http://10.33.27.127:3333')
+        salt(authtype: 'pam', clientInterface: local(arguments: '', blockbuild: true, function: 'modulomem_win.memoria', jobPollTime: 6, target: 'NetGenBAckup', targettype: 'glob'), credentialsId: '0cbaee23-40ff-4289-ba3a-2ade61ee12d5', saveFile: true, servername: 'http://10.251.205.11:3333')
         script {
             env.WORKSPACE = pwd()
             def output = readFile "${env.WORKSPACE}/saltOutput.json"
