--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,13 @@
+import groovy.json.*
 pipeline {
   agent any
 
   stages {
     stage('Windows memoria') {
       steps {
-        salt(authtype: 'pam', clientInterface: local(blockbuild: true, function: 'modulosmem_win.memoria', jobPollTime: 6, target: 'NGITQA-CLT-005', targettype: 'glob'), credentialsId: '0cbaee23-40ff-4289-ba3a-2ade61ee12d5', saveFile: true, servername: 'http://10.251.205.11:3333')
-        script {
-            env.WORKSPACE = pwd()
-            def output = readFile "${env.WORKSPACE}/saltOutput.json"
-            echo output
+        saltresult = salt(authtype: 'pam', clientInterface: local(blockbuild: true, function: 'modulosmem_win.memoria', jobPollTime: 6, target: 'NGITQA-CLT-005', targettype: 'glob'), credentialsId: '0cbaee23-40ff-4289-ba3a-2ade61ee12d5', saveFile: true, servername: 'http://10.251.205.11:3333')
+            def output = JsonOutput.prettyPrint(saltresult)
+            println(output)
         }
       }
     }
