--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,12 @@
-import groovy.json.*
+import groovy.json.Output 
+
 pipeline {
   agent any
 
   stages {
     stage('Windows memoria') {
       steps {
-        saltresult = salt(authtype: 'pam', clientInterface: local(blockbuild: true, function: 'modulosmem_win.memoria', jobPollTime: 6, target: 'NGITQA-CLT-005', targettype: 'glob'), credentialsId: '0cbaee23-40ff-4289-ba3a-2ade61ee12d5', saveFile: true, servername: 'http://10.251.205.11:3333')
+        saltresult = salt authtype: 'pam', clientInterface: local(blockbuild: true, function: 'modulosmem_win.memoria', jobPollTime: 6, target: 'NGITQA-CLT-005', targettype: 'glob'), credentialsId: '0cbaee23-40ff-4289-ba3a-2ade61ee12d5', saveFile: true, servername: 'http://10.251.205.11:3333'
             def output = JsonOutput.prettyPrint(saltresult)
             println(output)
        }
